fixed width for angle gradients, so they don't overlap

--- a/sass/modules/_revisions.sass
+++ b/sass/modules/_revisions.sass
@@ -48,7 +48,7 @@
       +stretch-y
       content: " "
       left: 100%
-      width: columns(2,8)
+      width: $col-width*2
   .old
     +columns(8,28)
     +suffix(3,28)
